jsonに変換する処理を追加

--- a/lambda/read/Dockerfile
+++ b/lambda/read/Dockerfile
@@ -4,8 +4,9 @@ COPY go.mod go.sum ./
 # build
 COPY . .
 # ARM64向けにビルド
-RUN GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -o read
-# 実行用イメージ
+RUN GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build .
+# ARMで動かすにはprovidedランタイムを使う
 FROM public.ecr.aws/lambda/provided:al2
-COPY --from=builder /read/read /main
-CMD ["/main"]
+WORKDIR /read
+COPY --from=builder /read/read /read
+ENTRYPOINT [ "./read" ]
