--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,7 +31,8 @@
 				"42Crunch.vscode-openapi",
 				"shardulm94.trailing-spaces",
 				"redhat.vscode-yaml",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"hediet.vscode-drawio"
 			],
 			"settings": {
 				"go.goroot": "/usr/local/go",
