--- a/lambda/site/Dockerfile
+++ b/lambda/site/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:1.20 as builder
-WORKDIR /heavy
+WORKDIR /site
 COPY go.mod go.sum ./
 # build
 COPY . .
@@ -7,6 +7,6 @@ COPY . .
 RUN GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build .
 # ARMで動かすにはprovidedランタイムを使う
 FROM public.ecr.aws/lambda/provided:al2
-WORKDIR /heavy
-COPY --from=builder /heavy/heavy /heavy
-ENTRYPOINT [ "./heavy" ]
+WORKDIR /site
+COPY --from=builder /site/site /site
+ENTRYPOINT [ "./site" ]
