Change Lambda API Code

--- a/lambda/read/Dockerfile
+++ b/lambda/read/Dockerfile
@@ -9,7 +9,10 @@ COPY . .
 RUN go get github.com/aws/aws-sdk-go/aws \
     && go get github.com/aws/aws-sdk-go/aws/session \
     && go get github.com/aws/aws-sdk-go/service/secretsmanager \
-    && go get github.com/jinzhu/gorm/dialects/mysql@v1.9.16 \
+    && go get github.com/aws/aws-secretsmanager-caching-go/secretcache \
+    && go get gorm.io/gorm \
+    && go get gorm.io/driver/mysql \
+    && go get gorm.io/driver/sqlite \
     && go get github.com/mmcdole/gofeed
 # ARM64向けにビルド
 RUN GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build .
