--- a/OpenAPI/backend_api.yaml
+++ b/OpenAPI/backend_api.yaml
@@ -14,10 +14,10 @@ servers:
 tags:
   - name: "read"
     description: "DBを読み出すだけの処理"
-  - name: "write"
-    description: "リクエストを受け取ってDBに書き込む処理"
-  - name: "heavy"
-    description: "データ処理などの重い処理"
+  - name: "user"
+    description: "ユーザー処理"
+  - name: "site"
+    description: "サイト登録・RSS記事取得などの処理"
 
 paths:
   "/read":
@@ -63,11 +63,11 @@ paths:
                     type: string
                     description: "エラーメッセージ"
                     example: "Bad Request"
-  "/write":
+  "/user":
     post:
       # メタデータ
       tags:
-        - "write"
+        - "user"
       summary: "リクエストを受け取ってDBに書き込む処理"
       description: "リクエストを受け取ってDBに書き込む処理"
       deprecated: false
@@ -86,21 +86,17 @@ paths:
                   example: "1234567890"
                 requestType:
                   type: string
-                  description: "API Write RequestType:(Feed,UserRegister,SyncConfig,CodeSync,ReportActivity,Search,SubscribeSite)"
-                  example: "Feed"
+                  description: "API User RequestType"
+                  example: ""
                 # API開発中はしょっちゅう仕様が変わるので引数はJSONで渡して自由度を高めておく
                 requestArgumentJson1:
                   type: string
-                  description: "API Write Request Argument 1 Value"
+                  description: "API User Request Argument 1 Value"
                   example: "json 1 arg"
                 requestArgumentJson2:
                   type: string
-                  description: "API Write Request Argument 2 Value"
+                  description: "API User Request Argument 2 Value"
                   example: "Json 2 arg"
-                requestArgumentJson3:
-                  type: string
-                  description: "API Write Request Argument 3 Value"
-                  example: "Json 3 arg"
 
       responses:
         "200":
@@ -121,13 +117,13 @@ paths:
                     description: "エラーメッセージ"
                     example: "Bad Request"
 
-  "/heavy":
+  "/site":
     post:
       # メタデータ
       tags:
-        - "heavy"
-      summary: "データ収集など重い処理"
-      description: "重い処理"
+        - "site"
+      summary: "サイト登録・RSS記事取得などの処理"
+      description: "サイト登録・RSS記事取得などの処理"
       deprecated: false
       # リクエスト
       requestBody:
@@ -144,21 +140,17 @@ paths:
                   example: "1234567890"
                 requestType:
                   type: string
-                  description: "API Heavy RequestType:(Feed,Search,SubscribeSite)"
+                  description: "API Site RequestType"
                   example: "Feed"
                 # API開発中はしょっちゅう仕様が変わるので引数はJSONで渡して自由度を高めておく
                 requestArgumentJson1:
                   type: string
-                  description: "API Heavy Request Argument 1 Value"
+                  description: "API Site Request Argument 1 Value"
                   example: "json 1 arg"
                 requestArgumentJson2:
                   type: string
-                  description: "API Heavy Request Argument 2 Value"
+                  description: "API Site Request Argument 2 Value"
                   example: "Json 2 arg"
-                requestArgumentJson3:
-                  type: string
-                  description: "API Heavy Request Argument 3 Value"
-                  example: "Json 3 arg"
 
       responses:
         "200":
