--- a/.github/workflows/lambda_cicd_for_test_api.yml
+++ b/.github/workflows/lambda_cicd_for_test_api.yml
@@ -39,6 +39,7 @@ jobs:
                 - test
                 - site
                 - user
+                - read
 
         steps:
             - name: Checkout code
